Source/WebCore/animation/DocumentTimeline.cpp
@@ -59,6 +59,7 @@ DocumentTimeline::DocumentTimeline(Document& document, PlatformDisplayID display
 DocumentTimeline::~DocumentTimeline()
 {
     m_invalidationTaskQueue.close();
+    m_eventDispatchTaskQueue.close();
 }
 
 void DocumentTimeline::detachFromDocument()
@@ -208,6 +209,39 @@ bool DocumentTimeline::runningAnimationsForElementAreAllAccelerated(Element& ele
             return false;
     }
     return !animations.isEmpty();
+}
+
+void DocumentTimeline::enqueueAnimationPlaybackEvent(AnimationPlaybackEvent& event)
+{
+    m_pendingAnimationEvents.append(event);
+
+    if (!m_eventDispatchTaskQueue.hasPendingTasks())
+        m_eventDispatchTaskQueue.enqueueTask(std::bind(&DocumentTimeline::performEventDispatchTask, this));
+}
+
+static inline bool compareAnimationPlaybackEvents(const Ref<WebCore::AnimationPlaybackEvent>& lhs, const Ref<WebCore::AnimationPlaybackEvent>& rhs)
+{
+    // Sort the events by their scheduled event time such that events that were scheduled to occur earlier, sort before events scheduled to occur later
+    // and events whose scheduled event time is unresolved sort before events with a resolved scheduled event time.
+    if (lhs->timelineTime() && !rhs->timelineTime())
+        return false;
+    if (!lhs->timelineTime() && rhs->timelineTime())
+        return true;
+    if (!lhs->timelineTime() && !rhs->timelineTime())
+        return true;
+    return lhs->timelineTime().value() < rhs->timelineTime().value();
+}
+
+void DocumentTimeline::performEventDispatchTask()
+{
+    if (m_pendingAnimationEvents.isEmpty())
+        return;
+
+    auto pendingAnimationEvents = WTFMove(m_pendingAnimationEvents);
+
+    std::stable_sort(pendingAnimationEvents.begin(), pendingAnimationEvents.end(), compareAnimationPlaybackEvents);
+    for (auto& pendingEvent : pendingAnimationEvents)
+        pendingEvent->target()->dispatchEvent(pendingEvent);
 }
 
 void DocumentTimeline::windowScreenDidChange(PlatformDisplayID displayID)
